Resolve header sidebar Circle Icon alignment bug

--- a/style.less
+++ b/style.less
@@ -395,6 +395,10 @@ body {
 				margin-right: 25px;
 				margin-bottom: 0;
 				position: relative;
+				
+				&.widget_circleicon-widget {
+					clear: none;
+				}
 
 				&:last-child {
 					margin-right: 0;
